snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
b762445e300ad48b932ce38b7182b4b135b723e2a9601f86d13c3287611d54f11c69c868ca8196e7b1662c92552a995305425668de86189f23b46fd2ea4a0da9